tests/failing/invalid_statement.dodo
// Expected: Did not expect token 'RightBrace' while parsing infix expression

fn main() {
    12
}
